private-hosting/manyfold/service-manyfold.yaml
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  namespace: manyfold
spec:
  selector: { app.kubernetes.io/name: manyfold }
  ports:
    - { name: http, port: 3214, targetPort: http }
