private-hosting/manyfold/ingress-manyfold.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manyfold
  namespace: manyfold
spec:
  ingressClassName: traefik
  rules:
    - host: manyfold.lab.theoboursy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manyfold
                port: { number: 3214 }
